deploy: 58b8d71821c719d85dc607a26973f016b7eb5da9

--- a/links/index.html
+++ b/links/index.html
@@ -326,23 +326,35 @@
 
 <h1 id="projectsfoundations-involved">Projects/Foundations involved</h1>
 <ul>
-<li><a href="https://elisa.tech">ELISA</a></li>
+<li><a href="https://elisa.tech">ELISA</a><ul>
 <li>since 2019 community member</li>
 <li>since 2023: <a href="https://elisa.tech/about/tsc/">Technical Steering Committee Chair</a></li>
-<li><a href="https://zephyrproject.org/">Zephyr</a></li>
+</ul>
+</li>
+<li><a href="https://zephyrproject.org/">Zephyr</a><ul>
 <li>since 2023: promoter</li>
-<li><a href="https://www.automotivelinux.org/">Automotive Grade Linux</a></li>
+</ul>
+</li>
+<li><a href="https://www.automotivelinux.org/">Automotive Grade Linux</a><ul>
 <li>since 2024: <a href="https://www.automotivelinux.org/announcements/ospo_eg/">OSPO EG</a></li>
-<li><a href="https://sdv.eclipse.org/">Eclipse SDV</a></li>
+</ul>
+</li>
+<li><a href="https://sdv.eclipse.org/">Eclipse SDV</a><ul>
 <li>since 2024: <a href="https://eclipse-score.github.io/">Safe Open Vehicle Core</a></li>
 <li>since 2024: <a href="https://sdv.eclipse.org/special-interest-groups/automotive-processes/">Automotive Processes SIG</a></li>
-<li><a href="https://linuxfoundation.eu/">Linux Foundation Europe</a></li>
+</ul>
+</li>
+<li><a href="https://linuxfoundation.eu/">Linux Foundation Europe</a><ul>
 <li>since 2023 <a href="https://linuxfoundation.eu/en/about/advisory-board">Advisory Board</a></li>
+</ul>
+</li>
 </ul>
 <h1 id="past-engagements">past engagements</h1>
 <ul>
-<li><a href="https://www.linaro.org/">Linaro</a></li>
+<li><a href="https://www.linaro.org/">Linaro</a><ul>
 <li>2011 - 2012: Freescale Landing Team</li>
+</ul>
+</li>
 </ul>
 
 
