deploy: 0d758cd74286bd1d443a536e5608055ac21c580b

--- a/links/index.html
+++ b/links/index.html
@@ -332,7 +332,7 @@
 </ul>
 </li>
 <li><a href="https://zephyrproject.org/">Zephyr</a><ul>
-<li>since 2023: promoter</li>
+<li>since 2023: promoter (support meetups, presentations, booth support)</li>
 </ul>
 </li>
 <li><a href="https://www.automotivelinux.org/">Automotive Grade Linux</a><ul>
